# ZAILON

./: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: deploy.yml  release.yml
src/: App.tsx  i18n.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/Layout/: AppWindow.tsx  Sidebar.tsx  TitleBar.tsx
src/components/UI/: DetectGamesModal.tsx  ModCard.tsx  Toggle.tsx
src/components/Views/: ExploreView.tsx  GamesView.tsx  HomeView.tsx  NewsView.tsx  SettingsView.tsx
src/store/: useStore.ts
src/types/: index.ts
src/utils/: dialog.ts  index.ts
